@@ -1,12 +1,12 @@
 const auth = require('../auth.json');
 
-const run = ({messageText, sendMessage, message}) => {
+const run = ({client, messageText, sendMessage, message}) => {
 	if (
 		messageText.toLowerCase() === 'kill yourself' ||
 		messageText.toLowerCase() === 'kys'
 	) {
 		if (auth.owners.includes(message.author.id)) {
-			exit(sendMessage);
+			exit(client, sendMessage);
 		} else {
 			sendMessage('You are not authorized to kill me.');
 		}
@@ -16,8 +16,9 @@ const run = ({messageText, sendMessage, message}) => {
 	}
 }
 
-const exit = async (sendMessage) => {
+const exit = async (client, sendMessage) => {
 	await sendMessage('🔫');
+	client.destroy();
 	process.exit(0);
 }
 
