@@ -1,3 +1,6 @@
+2020/07/31
+• Edit bad commands into good ones!
+• Improved alarm handling.
 2020/07/24
 • Minecraft functionality removed in favor of a dedicated Minecraft bot.
 2020/07/22
